--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
   "main": "./src/app.js",
   "repository": "https://github.com/messiasGeovani/nodejs-grillo-api.git",
   "author": "messiasGeovani <messias.geovani.lima@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
