--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "messiasGeovani <messias.geovani.lima@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   }
 }
